feat: finished api v1.1
