# backend/docs/swagger.yaml
@@ -6,13 +6,24 @@ definitions:
         type: string
       last_successful_ping:
         type: string
+      name:
+        type: string
       ping_time:
-        minimum: 1
         type: number
+      status:
+        enum:
+        - created
+        - restarting
+        - running
+        - removing
+        - paused
+        - exited
+        - dead
+        type: string
     required:
     - ip_address
     - last_successful_ping
-    - ping_time
+    - status
     type: object
   dto.GetContainerStatusResponse:
     properties:
@@ -24,8 +35,12 @@ definitions:
         type: string
       last_successful_ping:
         type: string
+      name:
+        type: string
       ping_time:
         type: number
+      status:
+        type: string
       updated_at:
         type: string
     type: object
@@ -33,8 +48,20 @@ definitions:
     properties:
       last_successful_ping:
         type: string
+      name:
+        type: string
       ping_time:
         type: number
+      status:
+        enum:
+        - created
+        - restarting
+        - running
+        - removing
+        - paused
+        - exited
+        - dead
+        type: string
     type: object
 info:
   contact:
@@ -60,6 +87,14 @@ paths:
         in: query
         name: id
         type: integer
+      - description: Filter by name
+        in: query
+        name: name
+        type: string
+      - description: Filter by status
+        in: query
+        name: status
+        type: string
       - description: Filter by minimum ping time
         in: query
         name: ping_time_min
