# backend/internal/presentation/dto/container_status_request.go
@@ -3,12 +3,16 @@ package dto
 import "time"
 
 type CreateContainerStatusRequest struct {
-	IPAddress          string    `json:"ip_address" validate:"required,ip"`
-	PingTime           float64   `json:"ping_time" validate:"required,min=1"`
+	IPAddress          string    `json:"ip_address"           validate:"required,ip"`
+	Name               string    `json:"name"`
+	Status             string    `json:"status"               validate:"required,oneof=created restarting running removing paused exited dead"`
+	PingTime           float64   `json:"ping_time"`
 	LastSuccessfulPing time.Time `json:"last_successful_ping" validate:"required"`
 }
 
 type UpdateContainerStatusRequest struct {
-	PingTime           float64   `json:"ping_time,omitempty"`
+	Name               string    `json:"name"`
+	Status             string    `json:"status"               validate:"omitempty,oneof=created restarting running removing paused exited dead"`
+	PingTime           float64   `json:"ping_time"`
 	LastSuccessfulPing time.Time `json:"last_successful_ping,omitempty"`
 }
